[package]
name = "nester"
version = "0.1.0"
authors = ["Joe Frikker <jfrikker@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = "3.0.13"
clap_derive = "3.0.12"
nom = "7.1.0"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
features = ["llvm11-0"]